sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:3: error: identifier expected but 'true' found.
  var Fin:Boolean==true
                   ^